# baha

./: ReadME.md  frames.gv
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/zerog_description/: .catkin
catkin_ws/devel/.private/zerog_gazebo/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/zerog_moveit_config/: .catkin  local_setup.sh
catkin_ws/devel/.private/zerog_moveit_servo/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/zerog_robot_calibrations/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/zerog_utilities/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/zerog_utilities/: TfInfoConfig.h
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  zerog_description.pc  zerog_gazebo.pc  zerog_moveit_config.pc  zerog_moveit_servo.pc  zerog_robot_calibrations.pc  zerog_utilities.pc
catkin_ws/devel/lib/zerog_moveit_servo/: zerog_pose_tracking_chaser_ee_based  zerog_pose_tracking_target_ee_based
catkin_ws/devel/lib/zerog_utilities/: create_waypoints  obtain_waypts_transform  obtain_waypts_transform_chaser  obtain_waypts_transform_target  reference_transformer  reference_transformer_chaser  reference_transformer_target  tf_info_node  twist_tf_info_node
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/zerog_description/cmake/: zerog_descriptionConfig-version.cmake  zerog_descriptionConfig.cmake
catkin_ws/devel/share/zerog_gazebo/cmake/: zerog_gazeboConfig-version.cmake  zerog_gazeboConfig.cmake
catkin_ws/devel/share/zerog_moveit_config/cmake/: zerog_moveit_configConfig-version.cmake  zerog_moveit_configConfig.cmake
catkin_ws/devel/share/zerog_moveit_servo/cmake/: zerog_moveit_servoConfig-version.cmake  zerog_moveit_servoConfig.cmake
catkin_ws/devel/share/zerog_robot_calibrations/cmake/: zerog_robot_calibrationsConfig-version.cmake  zerog_robot_calibrationsConfig.cmake
catkin_ws/devel/share/zerog_utilities/cmake/: zerog_utilities-msg-extras.cmake  zerog_utilities-msg-paths.cmake  zerog_utilitiesConfig-version.cmake  zerog_utilitiesConfig.cmake
catkin_ws/devel/share/zerog_utilities/docs/: TfInfoConfig-usage.dox  TfInfoConfig.dox  TfInfoConfig.wikidoc
catkin_ws/logs/zerog_utilities/: build.cmake.000.log.stderr
catkin_ws/src/zerog/: Instructions_for_Bahador.md
catkin_ws/src/zerog/zerog_description/: CMakeLists.txt  Readme.md  package.xml
catkin_ws/src/zerog/zerog_description/cfg/: view_robot.rviz
catkin_ws/src/zerog/zerog_description/config/: add_end_effector.yaml
catkin_ws/src/zerog/zerog_description/config/ur10e/: physical_parameters.yaml  visual_parameters.yaml
catkin_ws/src/zerog/zerog_description/launch/: load_ur.launch  load_ur10e.launch  load_zerog_description.launch  view_ur10e.launch  view_zerog.launch
catkin_ws/src/zerog/zerog_description/meshes/ceiling/: ceiling_slider_link.stl  slider_link.stl
catkin_ws/src/zerog/zerog_description/meshes/environment/: a.STL  b.STL  surf_m_a.STL  surf_m_b.STL  zerog_room.STL  zerog_room_andrej.stl  zerog_room_old.STL  zeroglab_ascii.STL
catkin_ws/src/zerog/zerog_description/meshes/misc/: cubesat.STL  satellite.STL
catkin_ws/src/zerog/zerog_description/meshes/wall/: base_link.stl  slider_link.stl  wall_base_link.stl  wall_slider_link.stl
catkin_ws/src/zerog/zerog_description/rviz/: handeye_calibration.rviz  view_robot.rviz
catkin_ws/src/zerog/zerog_description/urdf/: full_virtual_zerog.urdf  zerog.xacro
catkin_ws/src/zerog/zerog_description/urdf/inc/ceiling/: ceiling_track.xacro
catkin_ws/src/zerog/zerog_description/urdf/inc/common/: paramsforgazebo.gazebo.old.xacro  paramsforgazebo.gazebo.xacro  paramsforgazebo.gazebo_until_23_6_2023.xacro  track.transmission.xacro  ur_common.xacro  ur_macro.xacro
catkin_ws/src/zerog/zerog_description/urdf/inc/wall/: wall_track.xacro
catkin_ws/src/zerog/zerog_description/urdf/inc/zerog_system_xacro_versions/: zerog_system_default.xacro  zerog_system_simple_target_chaser.xacro
catkin_ws/src/zerog/zerog_gazebo/: CMakeLists.txt  Readme.md
catkin_ws/src/zerog/zerog_gazebo/config/: all_controllers.yaml
catkin_ws/src/zerog/zerog_gazebo/launch/: zerog_gazebo.launch  zerog_headless.launch
catkin_ws/src/zerog/zerog_gazebo/worlds/: zerog.world
catkin_ws/src/zerog/zerog_moveit_config/: .setup_assistant  CMakeLists.txt  Readme.md
catkin_ws/src/zerog/zerog_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names_zerog.yaml  joint_names_zerog.yaml_all  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_backup.yaml  ros_gazebo_controllers.yaml  zerog_controllers.yaml  zerog_moveit_servo.srdf
catkin_ws/src/zerog/zerog_moveit_servo/: CMakeLists.txt  Readme.md  package.xml
catkin_ws/src/zerog/zerog_robot_calibrations/: CMakeLists.txt  ReadMe.md  package.xml
catkin_ws/src/zerog/zerog_utilities/: CMakeLists.txt  ReadMe.md
catkin_ws/src/zerog/zerog_utilities/cfg/: TfInfo.cfg
catkin_ws/src/zerog/zerog_utilities/docs/: P3_setup.md  P3_setup_simulated.md  P5_IK_solver_tests_simulation.md  testing_vfdm_force_control.md
catkin_ws/src/zerog/zerog_utilities/launch/: create_waypoints.launch  obtain_waypts_transform.launch  record_data.launch  reference_transformer.launch  reference_transformer_chaser.launch  reference_transformer_target.launch  stp.launch  tf_info_node.launch  twist_tf_info_node.launch
catkin_ws/src/zerog/zerog_utilities/src/: create_waypoints.cpp  obtain_waypts_transform.cpp  obtain_waypts_transform_chaser.cpp  obtain_waypts_transform_target.cpp  reference_transformer.cpp  reference_transformer_chaser.cpp  reference_transformer_target.cpp  reference_transformer_target.py  tf_info_node.cpp  twist_tf_info_node.cpp
(+87 files in other folders)
