<?xml version="1.0"?>
<package format="2">
  <name>zerog_description</name>
  <version>1.2.5</version>
  <description>
      URDF description for SnT SpaceR ZeroG Lab including the UR10e robots and the linear rails
  </description>

  <author> Mohatashem Reyaz Makhdoomi</author>
  <author> Carol Martinez Luna</author>

  <maintainer email="mohatashem.makhdoomi@uni.lu">Mohatashem Reyaz Makhdoomi</maintainer>
  <maintainer email="carol.martinezluna@uni.lu">Carol Martinez Luna</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/zerog_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
